<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightorange"
    tools:context=".SignUp"
    android:paddingTop="50dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="50dp"

    >

   <!-- <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
-->

    <TextView
        android:id="@+id/tvname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/etname"
        app:layout_constraintBottom_toBottomOf="@+id/etname"
        app:layout_constraintStart_toStartOf="parent"
         />


 <androidx.appcompat.widget.AppCompatImageView
     android:id="@+id/IVmain"
     android:layout_width="200dp"
     android:layout_height="200dp"
     android:src="@drawable/ffspimg3"

     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     />



    <EditText

        android:id="@+id/etname"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/type_your_name"
        android:importantForAutofill="no"
        android:layout_marginStart="40dp"
        android:textAlignment="center"
        android:inputType="textCapWords"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/IVmain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvname"
         />

    <TextView
        android:id="@+id/tvUname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/etUname"
        app:layout_constraintStart_toStartOf="@id/tvname"
        app:layout_constraintTop_toBottomOf="@id/etname"
        app:layout_constraintTop_toTopOf="@id/etUname"
         />

    <EditText
        android:id="@+id/etUname"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username"
        android:textAlignment="center"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"

        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/tvUname"
        app:layout_constraintStart_toStartOf="@id/etname"
        app:layout_constraintTop_toBottomOf="@id/etname" />

    <TextView
        android:id="@+id/tvemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/e_mail"
        android:textStyle="bold"
        android:textColor="@color/black"

        app:layout_constraintTop_toBottomOf="@id/etUname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etemail"
        app:layout_constraintBottom_toBottomOf="@id/etemail"
        />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:hint="@string/someone_xyz_com"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="15dp"

        app:layout_constraintStart_toEndOf="@id/tvemail"
        app:layout_constraintTop_toBottomOf="@id/etUname"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <TextView
        android:id="@+id/tvpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/black"

        app:layout_constraintTop_toBottomOf="@id/etemail"
        app:layout_constraintTop_toTopOf="@id/etpass"
        app:layout_constraintBottom_toBottomOf="@id/etpass"
        app:layout_constraintStart_toStartOf="parent"


        />
    <EditText
        android:id="@+id/etpass"
        app:layout_constrainedWidth="true"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/tvpass"
        app:layout_constraintTop_toBottomOf="@id/etemail"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvgender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/etpass"
        app:layout_constraintStart_toStartOf="parent"


        />
    <RadioGroup
        android:id="@+id/grpbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="100dp"
        app:layout_constraintTop_toBottomOf="@id/etpass"
        app:layout_constraintStart_toEndOf="@id/tvgender"
        app:layout_constraintEnd_toEndOf="parent"

        >
        <RadioButton
            android:id="@+id/btnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/black"
            android:buttonTint="@color/black"

            />
        <RadioButton
            android:id="@+id/btnFmale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/female"
            android:textColor="@color/black"
            android:buttonTint="@color/black"
            />

    </RadioGroup>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUpbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/btnround"
        android:layout_marginBottom="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grpbtn"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/SignUpbtn2"
        app:layout_constraintStart_toStartOf="@id/SignUpbtn2"
        app:layout_constraintEnd_toEndOf="@id/SignUpbtn2"/>



</androidx.constraintlayout.widget.ConstraintLayout>


