<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.Welcome"
    android:elevation="8dp"

    >


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFC107"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchview"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="8dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signOutbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:elevation="20dp"
                android:background="#00000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>



    <TextView
        android:id="@+id/tvname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foods_available"
        android:layout_marginTop="5dp"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fragmentContainerView"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"

        android:padding="20dp"


        app:layout_constraintTop_toBottomOf="@id/tvname"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tvname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resturants"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvname2"


        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:defaultNavHost="true"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:navGraph="@navigation/nav_graph"
        tools:layout_editor_absoluteX="0dp" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:indeterminateTint="@color/lightorange"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView1"
        app:layout_constraintTop_toTopOf="@+id/recyclerView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>









