<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/lightorange"
    android:paddingTop="50dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    >
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/SignUpbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/IVmain"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ffspimg3"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/tvname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/IVmain"
        app:layout_constraintBottom_toTopOf="@id/etname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        />
    <EditText
        android:id="@+id/etname"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/type_your_name"
        android:importantForAutofill="no"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/namei"
        android:drawablePadding="10dp"
        android:paddingStart="20dp"
        android:inputType="textCapWords"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvname"


        />



    <TextView
        android:id="@+id/tvpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/etname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        />
    <EditText
        android:id="@+id/etpass"
        app:layout_constrainedWidth="true"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="15sp"
        android:textStyle="bold"
        android:drawablePadding="10dp"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/pass"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="20dp"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvpass"
        app:layout_constraintTop_toBottomOf="@id/tvpass"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnround"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etpass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUpbtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/btnround"
        app:layout_constraintStart_toEndOf="@id/loginbtn"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginbtn"
        />



    <!--<TextView
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Third Label"
        app:layout_constraintHorizontal_bias=".1"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/thirdLabel"
        android:layout_height="wrap_content"/>



    <TextView
        android:layout_width="wrap_content"
        android:text="Fourth Label"
        app:layout_constraintHorizontal_bias=".1"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/fourthLabel"
        android:layout_height="wrap_content"/>-->



    <!--<TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ev_name"
        app:layout_constraintBottom_toTopOf="@id/password"

        />
    <EditText
        android:id="@+id/ev_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Type your name"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/tv_name"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pword"
        />
    <TextView

        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pword"
        app:layout_constraintBottom_toBottomOf="parent"

        />

    <EditText
        android:id="@+id/pword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/password"
        app:layout_constraintTop_toTopOf="@+id/password" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        app:layout_constraintTop_toBottomOf="@id/pword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        app:layout_constraintStart_toEndOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pword"
        />
-->
    <!--<TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clickBtn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        android:text="Click Me"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/aboutbtn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="About"
        app:layout_constraintBottom_toTopOf="@+id/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />-->









</androidx.constraintlayout.widget.ConstraintLayout>

